--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
 						<img src="ico/youku.ico"/>
 						<span class="hSiteName">优酷视频</span>
 					</a>	
-					<a href="http://www.vip1280.cn/" class="hSite" target="_blank">
-						<img src="ico/vip1280.ico"/>
+					<a href="https://kuyunz.com/" class="hSite" target="_blank">
+						<img src="ico/kuyun.png"/>
 						<span class="hSiteName">VIP电影</span>
 					</a>
 					<a href="https://photos.google.com/" class="hSite" target="_blank">
