--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
 						<img src="ico/weibo.ico"/>
 						<span class="hSiteName">微博</span>
 					</a>
-					<a href="https://v.luziyang.cn/" class="hSite" target="_blank">
-						<img src="ico/viplu.ico"/>
-						<span class="hSiteName">档案馆</span>
+					<a href="https://alphalawyer.cn/" class="hSite" target="_blank">
+						<img src="ico/alpha.ico"/>
+						<span class="hSiteName">Alpha</span>
 					</a> 
 				</div>
 				
@@ -329,6 +329,10 @@
 						<img src="ico/legalinfo.png"/>
 						<span class="hSiteName">中国普法网</span>
 					</a>
+					<a href="https://alphalawyer.cn/" class="hSite" target="_blank">
+						<img src="ico/alpha.ico"/>
+						<span class="hSiteName">Alpha</span>
+					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
 	
