--- a/index.html
+++ b/index.html
@@ -937,7 +937,14 @@
 						<img src="ico/wenshushu.ico"/>
 						<span class="hSiteName">文叔叔</span>
 					</a>
-
+					<a href="https://www.ilovepdf.com/zh-cn" class="hSite" target="_blank" >
+						<img src="ico/ilovepdf.png"/>
+						<span class="hSiteName">PDF工具箱</span>
+					</a>
+					<a href="http://www.1ppt.com/" class="hSite" target="_blank" >
+						<img src="ico/1ppt.ico"/>
+						<span class="hSiteName">第一PPT</span>
+					</a>
 				</div>
 				<div class="hSiteLine"><!--第四行-->
 				
