--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 						<img src="ico/wxmp.ico"/>
 						<span class="hSiteName">公众号</span>
 					</a>
-					<a href="http://www.docsriver.com/index.php" class="hSite" target="_blank" >
-						<img src="ico/wenchuan.ico"/>
-						<span class="hSiteName">文川资源</span>
+					<a href="http://member.chinaacc.com/home/index.html#/mycourse/stu/0?_t=779276181592143215715" class="hSite" target="_blank" >
+						<img src="ico/zhkjw.ico"/>
+						<span class="hSiteName">中华会计网</span>
 					</a>
 					<a href="https://alphalawyer.cn/" class="hSite" target="_blank">
 						<img src="ico/alpha.ico"/>
@@ -576,6 +576,10 @@
 						<img src="ico/missyuan.ico"/>
 						<span class="hSiteName">PS设计教程</span>
 					</a>
+					<a href="https://www.pypypy.cn/" class="hSite" target="_blank" >
+						<img src="ico/pypypy.ico"/>
+						<span class="hSiteName">风向编程</span>
+					</a>			
 				</div>
 				<div class="hSiteLine"><!--第三行-->
 					
@@ -944,6 +948,10 @@
 					<a href="http://www.1ppt.com/" class="hSite" target="_blank" >
 						<img src="ico/1ppt.ico"/>
 						<span class="hSiteName">第一PPT</span>
+					</a>
+					<a href="http://www.docsriver.com/index.php" class="hSite" target="_blank" >
+						<img src="ico/wenchuan.ico"/>
+						<span class="hSiteName">文川资源</span>
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第四行-->
