--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 						<img src="ico/66law.ico"/>
 						<span class="hSiteName">法律法规检索</span>
 					</a>	
-					<a href="https://wusong.itslaw.com/home" class="hSite" target="_blank">
+					<a href="https://www.itslaw.com/home" class="hSite" target="_blank">
 						<img src="ico/wusong.ico"/>
 						<span class="hSiteName">无讼</span>
 					</a>	
@@ -952,6 +952,10 @@
 					<a href="http://www.docsriver.com/index.php" class="hSite" target="_blank" >
 						<img src="ico/wenchuan.ico"/>
 						<span class="hSiteName">文川资源</span>
+					</a>
+					<a href="http://www.officeplus.cn/Template/Home.shtml" class="hSite" target="_blank" >
+						<img src="ico/officep.ico"/>
+						<span class="hSiteName">微软模板</span>
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第四行-->
