不学python了，太难了！

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
 						<img src="ico/wpsnote.ico"/>
 						<span class="hSiteName">WPS便签</span>
 					</a>
-					<a href="https://www.pypypy.cn/" class="hSite" target="_blank" >
-						<img src="ico/pypypy.ico"/>
-						<span class="hSiteName">风向编程</span>
+					<a href="https://shimo.im/" class="hSite" target="_blank">
+						<img src="ico/shimo.ico"/>
+						<span class="hSiteName">石墨文档</span>
 					</a>
 
 					<a href="http://tianjin.lsfwpt.cn/login" class="hSite" target="_blank">
