--- a/index.html
+++ b/index.html
@@ -416,6 +416,10 @@
 						<img src="ico/bing.png"/>
 					   <span class="hSiteName">必应壁纸</span>
 					</a> 
+					<a href="https://www.mingyantong.com/" class="hSite" target="_blank">
+						<img src="ico/mingyantong.ico"/>
+					   <span class="hSiteName">名言通</span>
+					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
 					
