--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 						<img src="ico/wxmp.ico"/>
 						<span class="hSiteName">公众号</span>
 					</a>
-					<a href="http://member.chinaacc.com/home/index.html#/mycourse/stu/0?_t=779276181592143215715" class="hSite" target="_blank" >
-						<img src="ico/zhkjw.ico"/>
-						<span class="hSiteName">中华会计网</span>
+					<a href="http://highso.cn/v5/my/course" class="hSite" target="_blank" >
+						<img src="ico/haixue.ico"/>
+						<span class="hSiteName">嗨学网</span>
 					</a>
 					<a href="https://alphalawyer.cn/" class="hSite" target="_blank">
 						<img src="ico/alpha.ico"/>
@@ -585,6 +585,10 @@
 						<img src="ico/huke.ico"/>
 						<span class="hSiteName">虎课网</span>
 					</a>	
+					<a href="http://highso.cn/v5/my/course" class="hSite" target="_blank" >
+						<img src="ico/haixue.ico"/>
+						<span class="hSiteName">嗨学网</span>
+					</a>
 				</div>
 				<div class="hSiteLine"><!--第三行-->
 					
