--- a/index.html
+++ b/index.html
@@ -408,10 +408,6 @@
 						<img src="ico/cqp.png"/>
 						<span class="hSiteName">酷Q机器人</span>
 					</a> 
-					<a href="https://v.luziyang.cn/" class="hSite" target="_blank">
-						<img src="ico/viplu.ico"/>
-						<span class="hSiteName">档案馆</span>
-					</a> 
 					<a href="https://bing.lylares.com/" class="hSite" target="_blank">
 						<img src="ico/bing.png"/>
 					   <span class="hSiteName">必应壁纸</span>
@@ -648,7 +644,7 @@
 						<img src="ico/neets.ico"/>
 						<span class="hSiteName">Neets</span>
 					</a>	
-					<a href="http://weibodang.cn/index" class="hSite" target="_blank" >
+					<a href="http://weibodang.cn/" class="hSite" target="_blank" >
 						<img src="ico/weibodang.ico"/>
 						<span class="hSiteName">微博党</span>
 					</a>	
