--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 	<!--工具-->
 			<div class="hSiteBox hGongju">
 				<div class="hSiteLine"><!--第一行-->
-					<a href="http://www.panduoduo.net/" class="hSite" target="_blank" >
+					<a href="https://www.quzhuanpan.com/" class="hSite" target="_blank" >
 						<img src="ico/panduoduo.ico"/>
 						<span class="hSiteName">网盘搜索</span>
 					</a>
