--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 					</a>
 					<a href="http://www.ajxxgk.jcy.gov.cn/12309/gj/tj/index.shtml" class="hSite" target="_blank" >
 						<img src="ico/jcy.ico"/>
-						<span class="hSiteName">检察院案件公开</span>
+						<span class="hSiteName">检察院案件</span>
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第三行-->
