兼容主流笔记本

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>酷导航 - 干净清爽的上网主页</title>
 	<meta name="keywords" content="酷导航，网址导航,导航网,导航首页,导航地址,简约导航网站,无广告导航网站" />
 	<meta name="description" content="网址导航是一个轻导航网站，提供一个清爽干净的上网入口。清爽界面，简约导航，希望大家能有一个好的上网浏览心情，以及便捷的网址导航体验。" />
-	<link type="text/css" rel='stylesheet' href="moulem.css">
+	<link type="text/css" rel='stylesheet' href="moulem.css?v=1.2">
 	<script src='https://libs.baidu.com/jquery/1.9.0/jquery.js' type='text/javascript'></script>
 	<script type="text/javascript" src='keyword.js'></script>
 	<script type="text/javascript" src='moulem.js'></script>
@@ -13,61 +13,6 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 </head>
-<style>
- .yiyan {
-    position: absolute;
-    width: 500px;
-    text-align: center;
-    left: 50%;
-    bottom: -30px;
-    font-size: 11px;
-    line-height: 2.5;
-    margin-left: -250px;
-    letter-spacing: 2px;
- }
-.tianqi {
-	width: 500px;
-    position: absolute;
-    margin-left: -500px;
-    left: 50%;
-    top: 20px;
-	z-index: 999999;
-}
-
-#calendar{
-    background-color: #fff;
-    width: 120px;
-    height: 145px;
-    border-radius: 10px;
-    overflow: hidden;
-    text-align: center;
-}
-#calendar .yearMon{
-    background-color: #5192ff;
-    padding: 5px 0;
-    color: #fff;
-}
-
-#calendar .date{
-    color: #5192ff;
-    font-size: 56px;
-    font-weight: bold;
-}
-
-.toptop {
-
-}
-
-.rili {
-    position: absolute;
-    margin-right: -500px;
-    right: 50%;
-    top: 20px;
-    background: #ffffff;
-    box-shadow: 14px 14px 28px #cccccc, -14px -14px 28px #ffffff;
-}
-
-</style>
 <body>
 
 	<div id="bg" style="overflow: hidden;">
