--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	                        <input type="submit" value=" " class="subb" id='searchBtn' title="不填关键词试试">
 	                    </form>
 	                    <div class="promptBtn"></div>
-	                    <div class="promptText"><b>找点乐子？</b><br>不输入关键词点击搜<br>索图标或按回车键</div>
+	                    <div class="promptText"><b>不喜欢该搜索引擎？</b><br>点击搜索框最左侧图标<br>可切换为其他搜索引擎</div>
 	                    <div class="keyword"></div>
 	                </div>
 	            </div>
