--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	                    	</div>
 	                    </div>
 	                    <form action="https://www.baidu.com/s" method="GET" target="_blank" id='searchCheck' >
-	                        <input type="text" value="" x-webkit-speech="" lang="zh-CN" placeholder="一个十分干净的网址导航" name="wd" id='search' class="textb" autocomplete="off">
+	                        <input type="text" value="" x-webkit-speech="" lang="zh-CN" placeholder="探索更大的世界..." name="wd" id='search' class="textb" autocomplete="off">
 	                        <input type="submit" value=" " class="subb" id='searchBtn' title="不填关键词试试">
 	                    </form>
 	                    <div class="promptBtn"></div>
@@ -247,7 +247,7 @@
 					</a>
 					<a href="http://www.ajxxgk.jcy.gov.cn/12309/gj/tj/index.shtml" class="hSite" target="_blank" >
 						<img src="ico/jcy.ico"/>
-						<span class="hSiteName">检察院案件</span>
+						<span class="hSiteName">中国检察网</span>
 					</a>
 				</div>
 				<div class="hSiteLine"><!--第三行-->
