--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	                    	</div>
 	                    </div>
 	                    <form action="https://www.baidu.com/s" method="GET" target="_blank" id='searchCheck' >
-	                        <input type="text" value="" x-webkit-speech="" lang="zh-CN" placeholder="探索更大的世界..." name="wd" id='search' class="textb" autocomplete="off">
+	                        <input type="text" value="" x-webkit-speech="" lang="zh-CN" placeholder="探索更大的世界！" name="wd" id='search' class="textb" autocomplete="off">
 	                        <input type="submit" value=" " class="subb" id='searchBtn' title="不填关键词试试">
 	                    </form>
 	                    <div class="promptBtn"></div>
