--- a/index.html
+++ b/index.html
@@ -956,6 +956,10 @@
 						<img src="ico/nitai.ico"/>
 						<span class="hSiteName">新拟态效果</span>
 					</a>
+					<a href="https://www.hellofont.cn/" class="hSite" target="_blank">
+						<img src="ico/hellofont.ico"/>
+						<span class="hSiteName">字由</span>
+					</a>
 				</div>
 				
 			</div>
