--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
 						<span class="hSiteName">字由</span>
 					</a>
 					<a href="https://www.tablesgenerator.com/html_tables" class="hSite" target="_blank">
-						<img src="ico/table.ico"/>
+						<img src="ico/table.png"/>
 						<span class="hSiteName">html表格</span>
 					</a>
 				</div>
