--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 						<img src="ico/bilibili.ico"/>
 						<span class="hSiteName">哔哩哔哩</span>
 					</a>	
-					<a href="https://note.wps.cn/" class="hSite" target="_blank" >
-						<img src="ico/wpsnote.ico"/>
-						<span class="hSiteName">WPS便签</span>
+					<a href="https://www.88.com/" class="hSite" target="_blank" >
+						<img src="ico/88.png"/>
+						<span class="hSiteName">88邮箱</span>
 					</a>
 					<a href="https://shimo.im/" class="hSite" target="_blank">
 						<img src="ico/shimo.ico"/>
@@ -349,6 +349,11 @@
 						<img src="ico/officep.ico"/>
 						<span class="hSiteName">微软模板</span>
 					</a>
+					<a href="https://www.88.com/" class="hSite" target="_blank" >
+						<img src="ico/88.png"/>
+						<span class="hSiteName">88邮箱</span>
+					</a>
+					
 				</div>
 				<div class="hSiteLine"><!--第四行-->
 				
@@ -610,18 +615,18 @@
 						<img src="ico/sujin.ico"/>
 						<span class="hSiteName">素锦</span>
 					</a>	
-					<a href="http://wawa.fm/" class="hSite" target="_blank">
-						<img src="https://wawa.fm/static/img/wa/favicon.ico"/>
-						<span class="hSiteName">挖哇</span>
-					</a>	
 					<a href="https://www.juzikong.com/" class="hSite" target="_blank">
 						<img src="ico/juzikong.ico"/>
 						<span class="hSiteName">句子控</span>
 					</a>	
-					<a href="https://bypic.cn/" class="hSite" target="_blank">
-						<img src="ico/bypic.ico"/>
-						<span class="hSiteName">定格网</span>
-					</a>	
+					<a href="https://www.todaybing.com/" class="hSite" target="_blank">
+						<img src="ico/bing.png"/>
+					   <span class="hSiteName">必应壁纸</span>
+					</a> 
+					<a href="https://www.mingyantong.com/" class="hSite" target="_blank">
+						<img src="ico/mingyantong.ico"/>
+					   <span class="hSiteName">名言通</span>
+					</a> 
 				</div>
 				<div class="hSiteLine"><!--第二行-->
 					<a href="http://www.manshijian.com/" class="hSite" target="_blank">
@@ -654,13 +659,9 @@
 						<img src="ico/baideye.ico"/>
 						<span class="hSiteName">白的夜</span>
 					</a> 
-					<a href="https://bing.lylares.com/" class="hSite" target="_blank">
-						<img src="ico/bing.png"/>
-					   <span class="hSiteName">必应壁纸</span>
-					</a> 
-					<a href="https://www.mingyantong.com/" class="hSite" target="_blank">
-						<img src="ico/mingyantong.ico"/>
-					   <span class="hSiteName">名言通</span>
+					<a href="https://jikipedia.com/" class="hSite" target="_blank">
+						<img src="ico/xiaoji.ico"/>
+						<span class="hSiteName">小鸡词典</span>
 					</a> 
 				</div>
 				<div class="hSiteLine"><!--第四行-->
@@ -1007,6 +1008,17 @@ WIDGET = {
   }
 }
 </script>
+
+<!--黑夜模式-->
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
+<!--end-->
+
 <script src="https://widget.heweather.net/simple/static/js/he-simple-common.js?v=1.1"></script>
 <script src="activate-power-mode.js"></script>  
 <script>  
