--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 						<img src="ico/wxmp.ico"/>
 						<span class="hSiteName">公众号</span>
 					</a>
-					<a href="http://highso.cn/v5/my/course" class="hSite" target="_blank" >
-						<img src="ico/haixue.ico"/>
-						<span class="hSiteName">嗨学网</span>
+					<a href="https://www.email.cn/" class="hSite" target="_blank" >
+						<img src="ico/email.png"/>
+						<span class="hSiteName">Email</span>
 					</a>
 					<a href="https://alphalawyer.cn/" class="hSite" target="_blank">
 						<img src="ico/alpha.ico"/>
