--- a/index.html
+++ b/index.html
@@ -611,9 +611,9 @@
 						<img src="ico/mryw.ico"/>
 						<span class="hSiteName">每日一文</span>
 					</a>		
-					<a href="https://isujin.com/" class="hSite" target="_blank">
-						<img src="ico/sujin.ico"/>
-						<span class="hSiteName">素锦</span>
+					<a href="https://blog.luziyang.cn/" class="hSite" target="_blank">
+						<img src="ico/blog.ico"/>
+						<span class="hSiteName">彼岸临窗</span>
 					</a>	
 					<a href="https://www.juzikong.com/" class="hSite" target="_blank">
 						<img src="ico/juzikong.ico"/>
