--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 									<img class="scImg" src="images/searchChoice/sccili.png">
 									<span class="scName">搜影视</span>
 								</div>
+								<div class="scSmallBox">
+									<img class="scImg" src="images/searchChoice/scgoogle.png">
+									<span class="scName">威科先行</span>
+								</div>
 					
 
 								
